--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,35 @@
 }
 
 body{
-  background-color: #555;
+  background-color: #333;
+}
+
+.content{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fecha-hora{
+  color: white;
+  font-size: 7rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.en-punto{
+  filter: invert(100%);
+}
+
+@media(max-width:768px){
+  .fecha-hora{
+      font-size: 5rem;
+  }
+}
+@media(max-width:576px){
+  .fecha-hora{
+      font-size: 3rem;
+  }
 }
